--- a/bias_buster/app/static/css/about.css
+++ b/bias_buster/app/static/css/about.css
@@ -12,7 +12,7 @@
   font-size: 2.5rem;
   font-weight: 700;
   margin-bottom: 1.5rem;
-  color: var(--primary-color);
+  color: var(--primary-color-light);
 }
 
 .mission-section p {
@@ -222,6 +222,8 @@ background: var(--primary-gradient);
 
 .mission-section .cta-button:hover {
   background-color: #333;
+  box-shadow: var(--shadow-light);
+  transition: all 0.3s ease;
 }
 
 .love {
