--- a/bias_buster/app/static/css/index.css
+++ b/bias_buster/app/static/css/index.css
@@ -3,7 +3,7 @@
 .mainbox {
   padding-top: clamp(4rem, 5vw, 6rem);
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: var(--primary-gradient);
   color: var(--text-light);
 }
